# ATH-LAWSPHERE

./: .dockerignore  .env.example  .env.staging  .gitignore  .railway-trigger  .railwayignore  Dockerfile  RAILWAY_READY.md  README.md  bash.exe.stackdump  docker-compose.dev.local.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.railway.yml  docker-compose.yml  nixpacks.toml  package-lock.json  package.json  railway.toml  turbo.json
Artifacts/: LawSphere_Lovable_Pure_Design_Prompt.docx
apps/ai-service/: .env.example  .env.production.example  Dockerfile  Dockerfile.dev  bash.exe.stackdump  lawsphere.db  main.py  pyproject.toml  requirements.txt
apps/ai-service/app/: config.py  db.py  db_models.py
apps/ai-service/app/agents/: langgraph_agent.py  legal_assistant.py
apps/ai-service/app/api/: chat.py  files.py  health.py  knowledge_graph.py  search.py  sessions.py  similarity.py  trust_chat.py
apps/ai-service/app/integrations/: __init__.py  ecourts.py  indian_kanoon.py
apps/ai-service/app/middleware/: logging.py  rate_limit.py
apps/ai-service/app/models/: groq_client.py  llm_router.py  ollama_client.py
apps/ai-service/app/routing/: __init__.py  audit_logger.py  privacy_scanner.py  trust_router.py
apps/ai-service/app/services/: case_similarity.py  session_store.py
apps/ai-service/app/tools/: __init__.py  external_apis.py  legal_tools.py  tool_registry.py
docs/: AI_INFRASTRUCTURE_STRATEGY.md  FUTURE_FEATURES.md  INDEX.md  LOCAL_LLM_QUICK_REF.md  LOCAL_LLM_SETUP.md  LOCAL_LLM_SIMPLIFIED.md  PRODUCTION_DEPLOY.md  RAILWAY_CHECKLIST.md  RAILWAY_FILES.md  (+4 more)
(+150 files in other folders)
