[project]
name = "lawsphere-ai-service"
version = "1.0.0"
description = "AI orchestration service for Lawsphere using LangGraph and LangSmith"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=0.0.6",
    "langgraph>=0.0.26",
    "langsmith>=0.0.87",
    "openai>=1.10.0",
    "anthropic>=0.14.0",
    "google-generativeai>=0.3.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.3.0",
    "pgvector>=0.2.4",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "aiokafka>=0.10.0",
    "boto3>=1.34.0",
    "pillow>=10.2.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
